<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="fr.iut.mm161075.myapp.MultiplicationActivity">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_marginVertical="40sp"
            android:textAlignment="center"
            android:text="@string/hello_world"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/operation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textAlignment="center"
                android:text="@string/operation" />

        <EditText
                android:id="@+id/valeur"
                android:layout_width="fill_parent"
                android:inputType="number"
                android:paddingHorizontal="10sp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40sp"
                android:text="@string/bouton"
                android:onClick="verifyOperation"/>

    </LinearLayout>

</LinearLayout>
